--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,11 +25,22 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: release
+    permissions:
+      contents: read
+      id-token: write
     if: ${{ needs.release.outputs.release-created }}
     steps:
       - uses: actions/checkout@v4
 
-      - uses: ./.github/actions/setup-node-pnpm-install
+      - uses: pnpm/action-setup@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          registry-url: "https://registry.npmjs.org"
+          cache: "pnpm"
+
+      - run: pnpm install --frozen-lockfile
+        shell: bash
 
       - name: Publish to NPM
         run: pnpm publish --access public --no-git-checks
