--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,6 +1,6 @@
 pre-commit:
   jobs:
-    - run: pnpm dlx ultracite fix {stage_files}
+    - run: pnpm dlx ultracite fix {staged_files}
       glob:
         - "*.js"
         - "*.jsx"
